--- a/railway.toml
+++ b/railway.toml
@@ -1,9 +1,11 @@
-[deploy]
-build.command = "cd backend && pip install -r requirements.txt"
-start.command = "cd backend && python -m uvicorn app.main:app --host 0.0.0.0 --port $PORT"
-
 [build]
 builder = "nixpacks"
+buildCommand = "cd backend && pip install -r requirements.txt"
+
+[deploy]
+startCommand = "cd backend && python -m uvicorn app.main:app --host 0.0.0.0 --port $PORT"
+restartPolicyType = "ON_FAILURE"
+restartPolicyMaxRetries = 10
 
 [variables]
 ENVIRONMENT = "production"
