--- a/railway.toml
+++ b/railway.toml
@@ -1,4 +1,8 @@
+[build]
+builder = "nixpacks"
+
 [deploy]
+service = "backend"
 startCommand = "cd backend && python -m uvicorn app.main:app --host 0.0.0.0 --port $PORT"
 
 [variables]
