--- a/railway.toml
+++ b/railway.toml
@@ -1,20 +1,7 @@
-[build]
-builder = "nixpacks"
-
 [deploy]
-startCommand = "cd backend && python -m uvicorn app.main:app --host 0.0.0.0 --port $PORT"
-
-[nixpacks]
-plan = """
-providers:
-  python:
-    version: "3.11"
-    installCommand: cd backend && pip install -r requirements.txt
-    buildCommand: cd backend && echo "Building Python app..."
-    startCommand: cd backend && python -m uvicorn app.main:app --host 0.0.0.0 --port $PORT
-"""
+startCommand = "python -m uvicorn app.main:app --host 0.0.0.0 --port $PORT"
 
 [variables]
 ENVIRONMENT = "production"
-WHISPER_MODEL = "base"
+WHISPER_MODEL = "base" 
 MAX_UPLOAD_MB = "10"
