--- a/railway.toml
+++ b/railway.toml
@@ -1,8 +1,5 @@
-[build]
-builder = "dockerfile"
-
 [deploy]
-startCommand = "python -m uvicorn app.main:app --host 0.0.0.0 --port $PORT"
+startCommand = "cd backend && python -m uvicorn app.main:app --host 0.0.0.0 --port ${PORT:-8000}"
 
 [variables]
 ENVIRONMENT = "production"
