--- a/railway.toml
+++ b/railway.toml
@@ -1,5 +1,5 @@
 [deploy]
-startCommand = "cd backend && python -m uvicorn app.main:app --host 0.0.0.0 --port ${PORT:-8000}"
+startCommand = "python -m uvicorn app.main:app --host 0.0.0.0 --port ${PORT:-8000}"
 
 [variables]
 ENVIRONMENT = "production"
