--- a/railway.toml
+++ b/railway.toml
@@ -1,5 +1,5 @@
 [deploy]
-startCommand = "/app/start.sh"
+startCommand = "python -m uvicorn app.main:app --host 0.0.0.0 --port 8000"
 
 [variables]
 ENVIRONMENT = "production"
